--- a/cloudmusic/package.json
+++ b/cloudmusic/package.json
@@ -12,8 +12,9 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "antd": "^3.11.0",
+    "antd-mobile": "^2.2.6",
     "babel-plugin-dva-hmr": "^0.3.2",
-    "babel-plugin-import": "^1.11.0",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
