--- a/myvuex/.babelrc
+++ b/myvuex/.babelrc
@@ -2,5 +2,10 @@
   "presets": [
     ["env", { "modules": false }],
     "stage-3"
-  ]
+  ],
+  "plugins": ["transform-runtime", ["import", {
+    "libraryName": "vant",
+    "libraryDirectory": "es",
+    "style": true
+  }]]
 }
