--- a/myvuex/package.json
+++ b/myvuex/package.json
@@ -27,6 +27,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "echarts": "^4.2.0-rc.2",
     "file-loader": "^1.1.4",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.5.3",
