--- a/myvuex/package.json
+++ b/myvuex/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.28.7",
     "echarts": "^4.2.0-rc.2",
     "file-loader": "^1.1.4",
+    "js-cookie": "^2.2.0",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
@@ -37,6 +38,7 @@
     "vue-template-compiler": "^2.4.4",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "zepto": "^1.2.0"
   }
 }
